--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,18 @@
 {
-  "vendor": "CHANGE_ME",
-  "name": "CHANGE_ME",
-  "version": "0.0.0",
-  "title": "CHANGE_ME",
-  "description": "CHANGE_ME",
+  "vendor": "panamericana",
+  "name": "categorias-destacadas",
+  "version": "0.0.1",
+  "title": "Categorias Destacadas",
+  "description": "Componente que renderiza las categorias destacadas de la tienda con una vitrina de productos",
   "builders": {
     "react": "3.x",
     "messages": "1.x",
-    "docs": "0.x"
+    "docs": "0.x",
+    "store": "0.x"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vtex.css-handles": "0.x"
+  },
   "registries": [
     "smartcheckout"
   ],
